@@ -847,8 +847,14 @@ const aes_32t t_dec(r,c)[RC_LENGTH] =
     w0(0x20), w0(0x40), w0(0x80), w0(0x1b), w0(0x36)
 };
 
-#define d_1(t,n,b,v) const t n[256]    =   { b(v##0) }
-#define d_4(t,n,b,v) const t n[4][256] = { { b(v##0) }, { b(v##1) }, { b(v##2) }, { b(v##3) } }
+#if defined(__BORLANDC__)
+    #define concat(s1, s2) s1##s2
+    #define d_1(t,n,b,v) const t n[256]    =   { b(concat(v,0)) }
+    #define d_4(t,n,b,v) const t n[4][256] = { { b(concat(v,0)) }, { b(concat(v,1)) }, { b(concat(v,2)) }, { b(concat(v,3)) } }
+#else
+	#define d_1(t,n,b,v) const t n[256]    =   { b(v##0) }
+	#define d_4(t,n,b,v) const t n[4][256] = { { b(v##0) }, { b(v##1) }, { b(v##2) }, { b(v##3) } }
+#endif
 
 #else   /* declare and instantiate tables for dynamic value generation in in tab.c  */
 
